<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">twentytwo</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_bio">About Jordin</string>
    <string name="title_activity_store">StoreActivity</string>
    <string name="title_activity_about_us">AboutUsActivity</string>
    <string name="bio_button">About Jordin</string>
    <string name="store_button">Merchandise</string>
    <string name="about_button">About Us</string>
    <string name="resources_button">Resources</string>
    <string name="social_button">Social Media</string>
    <string name="title_activity_social">SocialActivity</string>
    <string name="title_activity_resources">ResourcesActivity</string>
    <string name="title_activity_cart">Cart</string>
    <string name="au_paragraph_1">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam gravida tristique nunc, ut porta justo imperdiet nec. Suspendisse potenti. Morbi lorem massa, luctus sit amet sem non, vulputate vestibulum metus. Phasellus consequat at sem non auctor. Duis porttitor, tellus in pharetra dapibus, tortor est commodo libero, vitae tempus urna metus sit amet massa. Donec suscipit ultricies tincidunt. Cras sit amet auctor ipsum, non pharetra diam.</string>
    <string name="org_title">Organization Title Name</string>
	<string name="org_description">This is the organization description. Lorem ipsum dolor sit amet, consectetur adipscing elit.</string>
	<string name="org_image_description">org_image</string>
	<string name="about_us_title">About the Fund</string>
	<string name="about_us_supported_orgs">Organizations We Support</string>
	<string name="about_jordin_title">About Jordin Tootoo</string>
	<string name="jb_paragraph_1">Lorem ipsum dolor sit amet, Hockey Canada, consectetur blah adipiscing blah blah elit. Aliquam, blah Hockey Canada gravida blah blah tristique nunc, ut porta justo, Hockey blah blah Canada imperdiet blah nec. blah Suspendisse blah potenti. Morbi blah lorem, Hockey blah Canada blah massa, Hockey blah Canada, luctus blah sit amet sem non, blah vulputate blah blah vestibulum blah metus. Phasellus blah blah consequat blah blah at sem non auctor blah. Duis blah porttitor blah, tellus in pharetra blah dapibus, tortor blah est commodo libero, vitae blah blah tempus urna metus sit amet massa. Donec suscipit ultricies tincidunt. Cras sit amet auctor ipsum, non pharetra diam.</string>
	<string name="jb_paragraph_2">Lorem ipsum dolor sit amet, Hockey Canada, consectetur blah adipiscing blah blah elit. Aliquam, blah Hockey Canada gravida blah blah tristique nunc, ut porta justo, Hockey blah blah Canada imperdiet blah nec. blah Suspendisse blah potenti. Morbi blah lorem, Hockey blah Canada blah massa, Hockey blah Canada, luctus blah sit amet sem non, blah vulputate blah blah vestibulum blah metus. Phasellus blah blah consequat blah blah at sem non auctor blah. Duis blah porttitor blah, tellus in pharetra blah dapibus, tortor blah est commodo libero, vitae blah blah tempus urna metus sit amet massa. Donec suscipit ultricies tincidunt. Cras sit amet auctor ipsum, non pharetra diam.</string>
	<string name="store_email">k10ks03@kzoo.edu</string>
	<string name="banner">Banner</string>
	<string name="tweet_teamtootoofund">Tweet @TeamTootooFund</string>
	<string name="twitter_icon">twitter icon</string>
	<string name="menu_image">menu image</string>
	<string name="social_activity_submit_button">Post</string>
	<string name="tootoo_pic_1">tootoo pic 1</string>
	<string name="store_item">store item</string>
</resources>
