<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MenuActivity" >

    <Button
        android:id="@+id/bioButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bio_button" />

    <Button
        android:id="@+id/storeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/store_button" />

    <Button
        android:id="@+id/aboutUsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_button" />

    <Button
        android:id="@+id/socialButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/social_button" />

    <Button
        android:id="@+id/resourcesButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resources_button" />

</LinearLayout>