<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".AboutUsActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_us_title"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/bodyText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/au_paragraph_1"
        android:paddingBottom="10dip" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_us_supported_orgs"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
    <ListView
        android:id="@+id/aboutUsListView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        
    </ListView>

</LinearLayout>
